--- a/stylesheets/style_index.css
+++ b/stylesheets/style_index.css
@@ -9,6 +9,12 @@
     font-family: "DMSansRegular";
 }
 
+a
+{
+    text-decoration: none;
+    color: black;
+}
+
 /*HEADER*/
 
 header
@@ -56,8 +62,72 @@ h1
     right: 5px;
     font-size: 36px;
     line-height: 47px;
-    
-    /* identical to box height */
-    
     color: #911C1C;
+}
+
+.photographer
+{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+.card
+{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card__image 
+{
+    overflow: hidden;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h3
+{
+    font-size: 36px;
+    line-height: 47px;
+    text-align: center;
+    color: #D3573C;
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.card__location
+{
+    font-size: 13px;
+    line-height: 17px;
+    margin-bottom: 0;
+    margin-top: 0;
+    text-align: center;
+    color: #901C1C;
+}
+
+.card__tagline
+{
+    font-size: 10px;
+    line-height: 13px;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: center;
+    color: #000000;
+}
+
+.card__price
+{
+    font-size: 9px;
+    line-height: 12px;
+    text-align: center;
+    color: #757575;
 }
