--- a/stylesheets/style_index.css
+++ b/stylesheets/style_index.css
@@ -131,3 +131,24 @@ h3
     text-align: center;
     color: #757575;
 }
+
+.card__taglist
+{
+    display: flex;
+    justify-content: center;
+}
+
+.tag
+{
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    color: #911C1C;
+    margin: 2px;
+    border: 0.5px solid #C4C4C4;
+    box-sizing: border-box;
+    border-radius: 11px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
