--- a/stylesheets/style_index.css
+++ b/stylesheets/style_index.css
@@ -76,6 +76,7 @@ h1
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
 }
 .card
 {
@@ -95,6 +96,11 @@ h1
     display:block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.card__taglist
+{
+    margin-left: -25px;
 }
 
 h3
