--- a/stylesheets/style_index.css
+++ b/stylesheets/style_index.css
@@ -162,3 +162,9 @@ h3
     padding-left: 5px;
     padding-right: 5px;
 }
+
+.tag:hover
+{
+    color: blanchedalmond;
+    background-color: #901C1C;
+}
