--- a/stylesheets/style_index.css
+++ b/stylesheets/style_index.css
@@ -74,7 +74,7 @@ h1
 .card
 {
     width: 30%;
-    min-width: 250px;
+    min-width: 370px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -158,7 +158,6 @@ h3
     padding-right: 5px;
 }
 
-.tag:hover,
 .header__filter:hover
 {
     color: blanchedalmond;
@@ -191,5 +190,10 @@ h3
         width: 350px;
         margin-left: -10px;
         justify-content: center;
+    }
+
+    .card
+    {
+        min-width: 250px;
     }
 }
