--- a/pages/stylesheets/style_pages.css
+++ b/pages/stylesheets/style_pages.css
@@ -148,11 +148,6 @@ h3
     padding-right: 5px;
 }
 
-.tag:hover
-{
-    color: blanchedalmond;
-    background-color: #901C1C;
-}
 
 /*filter section*/
 
@@ -241,7 +236,7 @@ margin-top: 11px;}
 
 /*Galery section*/
 
-.galery{
+#galery{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
