--- a/pages/stylesheets/style_pages.css
+++ b/pages/stylesheets/style_pages.css
@@ -174,6 +174,7 @@ h3
       border-top-right-radius: 0;
       border-bottom-left-radius: 5px;
       border-bottom-right-radius: 0;
+      width: 160px;
   }
 
   
@@ -193,7 +194,7 @@ h3
     display: none;
     position: absolute;
     background-color: #901C1c;
-    min-width: 161px;
+    width: 161px;
     overflow: auto;
     margin-top: 15px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
