--- a/pages/stylesheets/style_pages.css
+++ b/pages/stylesheets/style_pages.css
@@ -206,10 +206,17 @@ h3
   .dropdown-content a {
     border-top: 2px solid white;
     color: white;
-    padding: 12px 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     text-decoration: none;
     display: block;
-    width: 100px;
+    width: 161px;
+  }
+
+  .droptext
+  {
+    margin-top: 0;
+    margin-bottom: 0;
     margin-left: 15px;
   }
   
