--- a/stylesheets/style_index.css
+++ b/stylesheets/style_index.css
@@ -110,7 +110,7 @@ h3
 
 .card__location
 {
-    font-size: 13px;
+    font-size: 18px;
     line-height: 17px;
     margin-bottom: 0;
     margin-top: 0;
@@ -120,9 +120,9 @@ h3
 
 .card__tagline
 {
-    font-size: 10px;
+    font-size: 17px;
     line-height: 13px;
-    margin-top: 0;
+    margin-top: 5px;
     margin-bottom: 0;
     text-align: center;
     color: #000000;
@@ -130,7 +130,7 @@ h3
 
 .card__price
 {
-    font-size: 9px;
+    font-size: 16px;
     line-height: 12px;
     text-align: center;
     color: #757575;
@@ -146,7 +146,7 @@ h3
 .header__filter
 {
     font-weight: 500;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 16px;
     text-align: center;
     color: #911C1C;
