--- a/pages/stylesheets/lightbox.css
+++ b/pages/stylesheets/lightbox.css
@@ -79,6 +79,13 @@
     opacity: 1;
 }
 
+.lightbox__loader{
+    width: 38px;
+    height: 38px;
+    opacity: .5;
+    background: url(../../images/loader.svg) center center no-repeat;
+}
+
 @keyframes lightboxIn {
     from {opacity: 0;}
     to {opcity: 1;}
@@ -87,4 +94,9 @@
 .fadeOut
 {
     opacity: 0;
+}
+
+svg path,
+svg rect{
+  fill: #901C1C;
 }
