--- a/pages/stylesheets/lightbox.css
+++ b/pages/stylesheets/lightbox.css
@@ -1,102 +1,124 @@
-.lightbox 
-{
-    position:fixed;
+/* Now you want to define what the lightbox will look like. Note that you have the display
+   as none. You don't want it to show until the user clicks on one of the previews. 
+   You will change this display property with JavaScript below. */
+   
+   .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding: 10px 62px 0px 62px;
+    left: 0;
     top: 0;
-    left: 0; 
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.8);
-    z-index: 100;
-    animation: lightboxIn .5s;
-    transition: opacity .5s;
-}
-
-.lightbox__container
-{
-    margin-left: 70px;
-    margin-right: 70px;
+    overflow: auto;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  
+  .modal-content {
+    position: relative;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    min-height: 100vh;
-}
-
-.lightbox__img
-{
-    max-width: 100%;
-    height: auto;
+    margin: auto;
+    padding: 0 0 0 0;
+    width: 80%;
+    max-width: 1200px;
+    height: 80%;
+    max-height: 1000px;
+  }
+  
+  /* Same with your slides, you set the display to none, because you want to choose which 
+     one is shown at a time. */
+  
+  .slide {
+    display: none;
+    width: 80%;
+    height: 80%;
+  }
+  
+  .image-slide {
     display: block;
+    width: 100%;
+    max-height: 100%;
     object-fit: cover;
-    margin-top: 20px;
-    animation: lightboxIn .5s;
-}
-
-.lightbox__next,
-.lightbox__prev
-{
-    background: url(../../images/arrow.svg) center center / 30px 48px no-repeat;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50px;
-    height: 100%;
-    margin-top: -24px;
-    z-index: 101;
-}
-
-.lightbox__next:hover,
-.lightbox__prev:hover
-{
+    margin-left: 120px;
+    margin-right: auto;
+  }
+  
+  .modal-preview {
+    width: 100%;
+  }
+  
+  
+  /* You want the previews a little transparent to show that they are "inactive". 
+     You then add an .active or :hover class to animate the selections for your user when
+     they interact with your controls and clickable content.
+   */
+  
+  img.preview, img.modal-preview {
+    opacity: 0.6;
+  }
+  
+  img.active,
+  .preview:hover,
+  .modal-preview:hover {
     opacity: 1;
-}
-
-.lightbox__prev{
-    right: auto; 
-    left: 0;
-    transform: rotate(180deg);
-}
-
-.lightbox__close
-{
+  }
+  
+  img.hover-shadow {
+    transition: 0.3s;
+  }
+  
+  .hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  } 
+  
+  .close {
     background: url(../../images/close.svg) center center / 42px 42px no-repeat;
-    width: 42px;
-    height: 42px;
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    z-index: 102;
-}
+    color: #901C1C;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
 
-.lightbox button{
-    opacity: .5;
+  .slide__title{
+      margin-left: 120px;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
     cursor: pointer;
-    transition: .3s;
-    text-indent: -30000px;
-    border: none;
-}
-
-.lightbox button:hover{
-    opacity: 1;
-}
-
-.lightbox__loader{
-    width: 38px;
-    height: 38px;
-    opacity: .5;
-    background: url(../../images/loader.svg) center center no-repeat;
-}
-
-@keyframes lightboxIn {
-    from {opacity: 0;}
-    to {opcity: 1;}
-}
-
-.fadeOut
-{
-    opacity: 0;
-}
-
-svg path,
-svg rect{
-  fill: #901C1C;
-}
+  }
+  
+  .previous,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: #901C1C;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  .previous:hover,
+  .next:hover {
+    background-color: rgba(211, 87, 60, 0.8);
+    color: black;
+  }
