--- a/pages/stylesheets/lightbox.css
+++ b/pages/stylesheets/lightbox.css
@@ -6,13 +6,12 @@
     display: none;
     position: fixed;
     z-index: 1;
-    padding: 10px 62px 0px 62px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.95);
   }
   
   .modal-content {
@@ -24,7 +23,7 @@
     padding: 0 0 0 0;
     width: 80%;
     max-width: 1200px;
-    height: 80%;
+    height: 100%;
     max-height: 1000px;
   }
   
@@ -75,12 +74,12 @@
   } 
   
   .close {
-    background: url(../../images/close.svg) center center / 42px 42px no-repeat;
     color: #901C1C;
     position: absolute;
+    z-index: 200;
     top: 10px;
-    right: 25px;
-    font-size: 35px;
+    right: 15%;
+    font-size: 100px;
     font-weight: bold;
   }
 
@@ -105,7 +104,7 @@
     margin-top: -50px;
     color: #901C1C;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 40px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -119,6 +118,5 @@
   
   .previous:hover,
   .next:hover {
-    background-color: rgba(211, 87, 60, 0.8);
     color: black;
   }
