--- a/pages/stylesheets/lightbox.css
+++ b/pages/stylesheets/lightbox.css
@@ -26,6 +26,13 @@
     height: 100%;
     max-height: 1000px;
   }
+
+  .slider-content
+  {
+    max-height: 100%;
+    max-width: 100%;
+    margin-top: 100px;
+  }
   
   /* Same with your slides, you set the display to none, because you want to choose which 
      one is shown at a time. */
