--- a/pages/stylesheets/style_pages.css
+++ b/pages/stylesheets/style_pages.css
@@ -303,121 +303,41 @@ margin-top: 11px;}
   margin-left: 5px;
 }
 
-/*Slide
+/*bottom page*/
 
-.slide__medias, figure  {
-max-width: 100%; 
-height: auto;
-}
-
-.slides-control > button {
-padding: 0;
-margin: 0;
-border-style: none;
-touch-action: manipulation;
-display: inline-block;
-border: none;
-background: none;
-cursor: pointer;	
-}
-
-#slides {
-position: relative;	
-padding-bottom: 3rem;
-}
-#slides, #slides-items .slide-item, figure {
-width: 1200px;
-max-width: 100%;
-height: 600px;	
-max-height: calc(100vw / (1200 / 600));
-margin: 0 auto;	
-}
-#slides-items .slide-item {
-position: absolute;		
-
-figcaption {
-  position: absolute;
+.bottom__page{
+  width: 356px;
+  height: auto;
+  position: fixed;
+  right: 20px;
   bottom: 0;
-  width: 1200px;
-  max-width: calc(100% - 6.8rem);
-  max-height: calc(100% - 3.4rem);
-  overflow: auto;
-  padding: 1.7rem 3.4rem;
-  text-align: center;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.7);	
-      
-}
+  background: #DB8876;
+  border-radius: 5px; 
 }
 
-#slides-items .slideactive {
-opacity: 1;
-transition: opacity 3s;
-visibility: visible;
-}
-#slides-items .slide-item:not(.slideactive) {
-opacity: 0;
-transition: opacity 5s;
-visibility: hidden;
+.bottom__flex
+{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-
-.slides-control button {
-background-color: rgba(0, 0, 0, 0.7);
-
-svg, g {
-  fill: #901c1c;
-}
-&:hover, &:focus, &:active {
-  background-color: rgba(255, 255, 255, 0.9);
-  
-  svg {
-    fill: #901c1c;
-  }	
-} 	
+.bottom__likes,
+.bottom__price{
+  font-size: 24px;
+  color: black;
+  padding: 15px;
+  margin-right: 5px;
 }
 
+.bottom__heart{
+  height: 30px;
+  margin-top: 5px;
+}
 
-.slides-control button {
-  position: absolute;
-  z-index: 1;
+svg{
+  margin-top: 5px;
 }
-.slides-prev, .slides-next {
-  top: calc(50% - 3rem);
-  padding: 0.6rem;
-      
-  svg {
-    width: 1.7rem; height: 1.7rem;
-  }
-}
-.slides-prev {
-  left: 0;	
-  border-radius: 0px 7px 7px 0px;
-}
-.slides-next {
-  right: 0;
-  border-radius: 7px 0px 0px 7px;
-}
-.slides-playpause {
-  top: 0; right: 0;
-  width: 0.7rem; height: 0.7rem;		
-  padding: 0.7rem;	
-  background-color: rgba(0, 0, 0, 0.7);	
-  
-  svg {
-    width: 0.7rem;
-    height: 0.7rem;
-  }
-  .play,
-  .playpause.paused .pause {
-    display: none;	
-  }
-  .playpause.paused .play {
-    display: block;	
-  }
-}*/
-
-
 
 /*contact form*/
 .modal-btn {
