--- a/pages/stylesheets/style_pages.css
+++ b/pages/stylesheets/style_pages.css
@@ -387,7 +387,7 @@ margin-top: 0;}
     font-size: 16px;
   }
   
-  .bground {
+  #bground {
     display: none;
     position: absolute;
     z-index: 1;
