--- a/pages/stylesheets/style_pages.css
+++ b/pages/stylesheets/style_pages.css
@@ -195,9 +195,9 @@ h3
     display: none;
     position: absolute;
     background-color: #901C1c;
-    width: 161px;
+    width: 156px;
     overflow: auto;
-    margin-top: 15px;
+    margin-top: 20px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     border-bottom-right-radius: 5px;
@@ -211,7 +211,7 @@ h3
     padding-bottom: 16px;
     text-decoration: none;
     display: block;
-    width: 161px;
+    width: 156px;
   }
 
   .droptext
@@ -229,7 +229,7 @@ color: black;}
       width: 50px;
       position: absolute;
     font-size: 24px;
-    margin-top: -15px;
+    margin-top: -16px;
   }
 
   .triger__content
@@ -242,8 +242,10 @@ color: black;}
   }
 
   
-  .show {display: block;
-margin-top: 0;}
+  .show {
+      display: block;
+    margin-top: 10px;
+  }
 
 /*Galery section*/
 
