--- a/stylesheets/style_index.css
+++ b/stylesheets/style_index.css
@@ -189,27 +189,32 @@ h3
 {
     .header__logo
     {
-        width: 170px;
+        width: 120px;
+        height: auto;
+        margin-top: 15px;
+        margin-left: 15px;
     }
 
     main > h1
     {
+        width: 40%;
         font-size: 14px;
-        margin-top: 15px;
-        width: 150px;
+        margin-top: 25px;
+        margin-right: 15px;
     }
+
+
 
     header {
         display: flex;
         flex-wrap: wrap;
         justify-self: center;
-        width: 170px;
+        width: 100%;
     }
 
     #header__filters
     {
-        width: 350px;
-        margin-left: -10px;
+        margin-left: -30px;
         justify-content: center;
     }
 
