--- a/pages/stylesheets/lightbox.css
+++ b/pages/stylesheets/lightbox.css
@@ -131,8 +131,19 @@
   @media only screen and (max-width: 450px)
   {
     .previous,
-    .next {
-      font-size: 16px;
+    .next
+    {
+      font-size: 20px;
+    }
+
+    .close__lightbox{
+      font-size: 40px;
+      margin-top: 30%;
+    }
+
+    .modal-content
+    {
+      width: 100%;
     }
 
     .image-slide{
