--- a/pages/stylesheets/lightbox.css
+++ b/pages/stylesheets/lightbox.css
@@ -44,9 +44,10 @@
   }
   
   .image-slide {
+    margin: 5%;
     display: block;
-    width: 100%;
-    max-height: 100%;
+    width: 90%;
+    max-height: 90%;
     object-fit: cover;
     margin-left: 120px;
     margin-right: auto;
@@ -108,6 +109,7 @@
     top: 50%;
     width: auto;
     padding: 16px;
+    margin: 10px;
     margin-top: -50px;
     color: #901C1C;
     font-weight: bold;
