--- a/pages/stylesheets/style_pages.css
+++ b/pages/stylesheets/style_pages.css
@@ -202,9 +202,9 @@ h3
     display: none;
     position: absolute;
     background-color: #901C1c;
-    width: 156px;
+    width: 192px;
     overflow: auto;
-    margin-top: 20px;
+    margin-top: 0px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     border-bottom-right-radius: 5px;
@@ -218,10 +218,15 @@ h3
     padding-bottom: 16px;
     text-decoration: none;
     display: block;
-    width: 156px;
+    width: 192px;
   }
 
+  .dropbtn{
+      display: inline-block;
+      width: 110px;
+  }
   .dropdown__btn {
+      display: block;
       width: 160px;
   }
 
@@ -236,11 +241,10 @@ h3
 color: black;}
 
   .triger{
-      height: 53px;
+      height: 54px;
       width: 50px;
       position: absolute;
     font-size: 24px;
-    margin-top: -16px;
   }
 
   .triger__content
@@ -255,7 +259,6 @@ color: black;}
   
   .show {
       display: block;
-    margin-top: 10px;
   }
 
 /*Galery section*/
@@ -370,7 +373,6 @@ color: black;}
   .footer {
     margin: 20px;
     padding: 10px;
-    font-family: var(--font-slab);
   }
   
   /* Modal form */
@@ -429,7 +431,6 @@ color: black;}
     width: 100%;
     max-width: 500px;
     animation-name: modalopen;
-    animation-duration: var(--modal-duration);
     background: #DB8876;
     border-radius: 10px;
     overflow: hidden;
@@ -445,7 +446,6 @@ color: black;}
   }
   
   label {
-    font-family: var(--font-default);
     font-size: 17px;
     font-weight: normal;
     display: inline-block;
